[workspace]
resolver = "2"
members = [
    "tools/conformance",
    "protokit",
    "protokit_build",
    "protokit_proto",
    "protokit_grpc",
    "protokit_desc",
    "protokit_textformat",
    "protokit_binformat",
    "protokit_examples",
    "protokit_derive",
]

exclude = ["tools/gendesc", "tools/fuzz"]

[profile.release]
codegen-units = 1
debug = 1

[workspace.dependencies]
anyhow = "1.0.100"
indexmap = "2.12.1"
bumpalo = { version = "3.19.0", default-features = false }
thiserror = "2.0.6"
bytes = "1.11.0"
quote = "1.0.42"
syn = { version = "2.0.111", default-features = false }
proc-macro2 = "1.0.103"
convert_case = "0.10.0"
prettyplease = "0.2.37"
petgraph = "0.8.3"
arcstr = "1.2.0"
tonic = { version = "0.11.0", default-features = false }
futures = "0.3.31"
async-trait = "0.1.89"
nom = "7.1.3"
nom_locate = "4.0.0"
nom-supreme = "0.8.0"
miette = { version = "5.10.0", default-features = false }
lexical-core = "0.8.5"
minimal-lexical = "0.2.1"
logos = { version = "0.13.0", default-features = false }
maplit = "1.0.2"
tracing-subscriber = "0.3.22"
glob = "0.3.3"


binformat = { path = "protokit_binformat", package = "protokit_binformat", version = "0.2.0" }
build = { path = "protokit_build", package = "protokit_build", version = "0.2.0" }
textformat = { path = "protokit_textformat", package = "protokit_textformat", version = "0.2.0" }
desc = { path = "protokit_desc", package = "protokit_desc", version = "0.2.0" }
grpc = { path = "protokit_grpc", package = "protokit_grpc", version = "0.2.0" }
derive = { path = "protokit_derive", package = "protokit_derive", version = "0.2.0" }
proto = { path = "protokit_proto", package = "protokit_proto", version = "0.2.0", default-features = false }
protokit = { path = "protokit", version = "0.2.0" }

lex_core = { package = "lexical-core", version = "0.8.5" }
lex_float = { package = "minimal-lexical", version = "0.2.1" }
