[package]
name = "protokit"
version = "0.0.1"
edition = "2021"

[features]
default = []
grpc = ["dep:grpc"]
descriptors = ["desc/descriptors"]

[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"

[dependencies.textformat]
package = "protokit_textformat"
path = "../protokit_textformat"

[dependencies.desc]
package = "protokit_desc"
path = "../protokit_desc"

[dependencies.grpc]
package = "protokit_grpc"
path = "../protokit_grpc"
optional = true

[dependencies.derive]
package = "protokit_derive"
path = "../protokit_derive"

[dependencies]
anyhow = "1"
indexmap = "1"

[dev-dependencies]
maplit = "1.0.2"