[package]
name = "protokit"
version = "0.0.2"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []
grpc = ["dep:grpc"]
descriptors = ["desc/descriptors"]

[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"
version = "0.0.2"

[dependencies.textformat]
package = "protokit_textformat"
path = "../protokit_textformat"
version = "0.0.2"
optional = true

[dependencies.desc]
package = "protokit_desc"
path = "../protokit_desc"
version = "0.0.2"
optional = true

[dependencies.grpc]
package = "protokit_grpc"
path = "../protokit_grpc"
version = "0.0.2"
optional = true

[dependencies.derive]
package = "protokit_derive"
path = "../protokit_derive"
version = "0.0.2"

[dependencies]
anyhow = "1"
indexmap = "1"
bumpalo = { version = "3", features = ["boxed", "collections"]}

[dev-dependencies]
maplit = "1.0.2"
