[package]
name = "protokit"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []
grpc = ["dep:grpc"]
descriptors = ["desc/descriptors"]

[dependencies.binformat]
workspace = true

[dependencies.textformat]
workspace = true
optional = true

[dependencies.desc]
workspace = true
optional = true

[dependencies.grpc]
workspace = true
optional = true

[dependencies.derive]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
bumpalo = { workspace = true, features = ["boxed", "collections"] }

[dev-dependencies]
maplit = { workspace = true }
