[package]
name = "protokit_binformat"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[dependencies.derive]
package = "protokit_derive"
path = "../protokit_derive"
version = "0.0.2"

[dependencies]
indexmap = "1"
thiserror = "1"
