[package]
name = "protokit_binformat"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = ["arena"]
arena = ["bumpalo", "bumpalo/boxed", "bumpalo/collections"]

[dependencies.derive]
workspace = true

[dependencies]
bytes = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

bumpalo = { workspace = true, optional = true, default-features = false }
