[package]
name = "protokit_build"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = ["protoc"]
protoc = ["descriptors"]
parser = ["protokit_proto"]

descriptors = ["protokit_desc/descriptors"]

[dependencies.protokit_binformat]
path = "../protokit_binformat"
version = "0.0.1"

[dependencies.protokit_desc]
path = "../protokit_desc"
version = "0.0.1"

[dependencies.protokit_proto]
path = "../protokit_proto"
version = "0.0.1"
default-features = false
optional = true

[dependencies]
anyhow = "1"
quote = "1.0.26"

syn = { version = "2.0.9", default-features = false, features = ["parsing", "proc-macro"] }
proc-macro2 = "1.0.51"

prettyplease = { version = "0.2.1", features = ["verbatim"] }
convert_case = "0.6.0"
