[package]
name = "protokit_build"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = ["protoc"]
protoc = ["descriptors"]
parser = ["proto"]

descriptors = ["desc/descriptors"]

[dependencies.binformat]
workspace = true

[dependencies.desc]
workspace = true

[dependencies.proto]
workspace = true
default-features = false
optional = true

[dependencies]
anyhow = { workspace = true }
quote = { workspace = true }
petgraph = { workspace = true }

syn = { workspace = true, default-features = false, features = [
    "parsing",
    "proc-macro",
] }
proc-macro2 = { workspace = true }

prettyplease = { workspace = true, features = ["verbatim"] }
convert_case = { workspace = true }
