[package]
name = "protokit_derive"
version = "0.1.4"
edition = "2018"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"
convert_case = "0.6.0"
