[package]
name = "protokit_derive"
version = "0.2.0"
edition = "2018"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
