[package]
name = "protokit_desc"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []
descriptors = []

[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"
version = "0.1.2"

[dependencies.textformat]
package = "protokit_textformat"
path = "../protokit_textformat"
version = "0.1.2"

[dependencies.derive]
package = "protokit_derive"
path = "../protokit_derive"
version = "0.1.2"

[dependencies]
arcstr = "1.1.4"
indexmap = "1"

[dev-dependencies]
maplit = "1.0.2"
