[package]
name = "protokit_desc"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []
descriptors = []

[dependencies.binformat]
workspace = true

[dependencies.textformat]
workspace = true

[dependencies.derive]
workspace = true

[dependencies]
arcstr = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
