[package]
name = "protokit_examples"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

build = "build.rs"
publish = false


[dependencies]
protokit = { path = "../protokit", version = "0.0.2", features = ["textformat"] }

[build-dependencies]
protokit_build = { path = "../protokit_build" }
