[package]
name = "protokit_grpc"
version = "0.0.3"
edition = "2021"
license = "MIT"
readme = "README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"


[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"
version = "0.0.3"

[dependencies.tonic]
version = "0.9.1"
default-features = false
features = ["codegen", "transport"]

[dependencies]
anyhow = "1"
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1.56"

