[package]
name = "protokit_grpc"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"


[dependencies.binformat]
workspace = true

[dependencies.tonic]
workspace = true
default-features = false
features = ["codegen", "transport"]

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
