[package]
name = "protokit_proto"
version = "0.0.1"
edition = "2021"

[features]
default = []
descriptors = []

[dependencies.protokit_textformat]
path = "../protokit_textformat"

[dependencies.protokit_desc]
path = "../protokit_desc"

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
indexmap = "1.8.2"
lex_core = { package = "lexical-core", version = "*", features = ["parse-integers", "power-of-two"] }
lex_float = { package = "minimal-lexical", version = "*" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
glob = "0.3.0"