[package]
name = "protokit_proto"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []
descriptors = ["desc/descriptors"]

[dependencies.textformat]
workspace = true

[dependencies.desc]
workspace = true

[dependencies]
nom = { workspace = true }
nom_locate = { workspace = true }
nom-supreme = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true, default-features = false, features = [
    "fancy-no-backtrace",
] }

indexmap = { workspace = true }
lex_core = { workspace = true, features = ["parse-integers", "power-of-two"] }
lex_float = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
glob = { workspace = true }
