[package]
name = "protokit_textformat"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []

[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"
version = "0.0.2"

[dependencies]
logos = { version = "0.13", default-features = false, features = ["export_derive"] }
thiserror = "1"
