[package]
name = "protokit_textformat"
version = "0.0.3"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []

[dependencies.binformat]
package = "protokit_binformat"
path = "../protokit_binformat"
version = "0.0.3"

[dependencies]
logos = { version = "0.13.0", default-features = false, features = ["export_derive"] }
thiserror = "1"
