[package]
name = "protokit_textformat"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.MD"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]
description = "Usable protocol buffers"

[features]
default = []

[dependencies.binformat]
workspace = true

[dependencies]
lazy_static = "1.5.0"
logos = { workspace = true, default-features = false, features = [
    "export_derive",
] }
thiserror = { workspace = true }
