[package]
name = "conformance"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
protokit = { path = "../../protokit", features = ["textformat"] }

[build-dependencies]
protokit_build = { path = "../../protokit_build" }

