[package]
name = "conformance"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/semtexzv/protokit"
authors = ["<semtexzv@gmail.com>"]

build = "build.rs"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
protokit = { path = "../../protokit", features = ["textformat"] }

[build-dependencies]
protokit_build = { path = "../../protokit_build", version = "0.0.1" }

